tests/parser/tests/cases/should_pass/unary_ops/case.hash
let k = ~a;
let k = ---a;
let k = +(-(+a));
