tests/parser/tests/cases/should_fail/double_hash/case.hash
let k = ##naughty_intrinsic();
